--- a/compose.yml
+++ b/compose.yml
@@ -12,6 +12,16 @@ services:
     volumes:
       - db-data:/var/lib/postgresql
     shm_size: 128mb
+  swagger-ui:
+    image: docker.swagger.io/swaggerapi/swagger-ui
+    container_name: court-booking-swagger
+    restart: always
+    ports:
+      - "8081:8080"
+    environment:
+      - SWAGGER_JSON=/docs/openapi.yml
+    volumes:
+      - ./docs/openapi.yml:/docs/openapi.yml
 
 volumes:
   db-data:
