--- a/compose.yml
+++ b/compose.yml
@@ -4,13 +4,15 @@ services:
     container_name: court-booking-db
     restart: always
     environment:
-      POSTGRES_USER: gravity
-      POSTGRES_PASSWORD: yLJuh3kGh9j5
-      POSTGRES_DB: mydb
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_TEST_DB: ${POSTGRES_TEST_DB}
     ports:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql
+      - ./db:/docker-entrypoint-initdb.d
     shm_size: 128mb
   swagger-ui:
     image: docker.swagger.io/swaggerapi/swagger-ui
