--- a/compose.yml
+++ b/compose.yml
@@ -27,6 +27,7 @@ services:
       - "8080:8080"
     environment:
       APP_ENV: ${APP_ENV}
+      PROD_ORIGIN: ${PROD_ORIGIN}
       HTTP_ADDR: :8080
       DB_DSN: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?sslmode=disable
       TEST_DB_DSN: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_TEST_DB}?sslmode=disable
