Split openapi.yml

--- a/compose.yml
+++ b/compose.yml
@@ -48,7 +48,7 @@ services:
     environment:
       - SWAGGER_JSON=/docs/openapi.yml
     volumes:
-      - ./docs/openapi.yml:/docs/openapi.yml
+      - ./docs:/docs
 
 volumes:
   db-data:
