--- a/database-compose.yml
+++ b/database-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql
       - ./db:/docker-entrypoint-initdb.d
     shm_size: 128mb
 
