--- a/compose.yml
+++ b/compose.yml
@@ -7,6 +7,7 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_TEST_DB: ${POSTGRES_TEST_DB}
     volumes:
       - db-data:/var/lib/postgresql
       - ./db:/docker-entrypoint-initdb.d
