--- a/compose.yml
+++ b/compose.yml
@@ -19,6 +19,7 @@ services:
       retries: 5
 
   backend:
+    image: court-booking-backend
     build:
       context: .
       dockerfile: Dockerfile
