--- a/docs/components/schemas/resourcetype.yml
+++ b/docs/components/schemas/resourcetype.yml
@@ -19,7 +19,7 @@ ResourceTypeResponse:
     - organization_id
     - name
 
-CreateResourceTypeBody:
+CreateResourceTypeRequest:
   type: object
   properties:
     organization_id:
