--- a/docs/paths/bookings.yml
+++ b/docs/paths/bookings.yml
@@ -80,19 +80,19 @@ listBookings:
               $ref: "../components/schemas/common.yml#/ErrorResponse"
 
 bookingDetail:
-  parameters:
-    - name: id
-      in: path
-      required: true
-      schema:
-        type: string
-        format: uuid
   get:
     tags:
       - Bookings
     summary: "取得預約詳情"
     security:
       - bearerAuth: []
+    parameters: &idParams
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
     responses:
       "200":
         description: booking details
@@ -110,6 +110,7 @@ bookingDetail:
     summary: "更新預約 (時間或狀態)"
     security:
       - bearerAuth: []
+    parameters: *idParams
     requestBody:
       required: true
       content:
@@ -135,6 +136,7 @@ bookingDetail:
     summary: "刪除 / 取消預約"
     security:
       - bearerAuth: []
+    parameters: *idParams
     responses:
       "204":
         description: deleted
