--- a/docs/paths/resources.yml
+++ b/docs/paths/resources.yml
@@ -56,19 +56,19 @@ listResources:
         description: Forbidden
 
 resourceDetail:
-  parameters:
-    - name: id
-      in: path
-      required: true
-      schema:
-        type: string
-        format: uuid
   get:
     tags:
       - Resources
     summary: "取得資源詳情"
     security:
       - bearerAuth: []
+    parameters: &idParams
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
     responses:
       "200":
         description: resource details
@@ -84,6 +84,7 @@ resourceDetail:
     summary: "更新資源 (Organization Owner/Admin)"
     security:
       - bearerAuth: []
+    parameters: *idParams
     requestBody:
       content:
         application/json:
@@ -106,6 +107,7 @@ resourceDetail:
     summary: "刪除資源 (Organization Owner/Admin)"
     security:
       - bearerAuth: []
+    parameters: *idParams
     responses:
       "204":
         description: deleted
