--- a/docs/paths/resourcetypes.yml
+++ b/docs/paths/resourcetypes.yml
@@ -37,7 +37,7 @@ listResourceTypes:
       content:
         application/json:
           schema:
-            $ref: "../components/schemas/resourcetype.yml#/CreateResourceTypeBody"
+            $ref: "../components/schemas/resourcetype.yml#/CreateResourceTypeRequest"
     responses:
       "201":
         description: Resource Type created
@@ -49,19 +49,19 @@ listResourceTypes:
         description: Permission denied
 
 resourceTypeDetail:
-  parameters:
-    - name: id
-      in: path
-      required: true
-      schema:
-        type: string
-        format: uuid
   get:
     tags:
       - ResourceTypes
     summary: "取得 Resource Type 詳情"
     security:
       - bearerAuth: []
+    parameters: &idParams
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
     responses:
       "200":
         description: Resource Type details
@@ -77,6 +77,7 @@ resourceTypeDetail:
     summary: "更新 Resource Type (Organization Owner/Admin)"
     security:
       - bearerAuth: []
+    parameters: *idParams
     requestBody:
       content:
         application/json:
@@ -99,6 +100,7 @@ resourceTypeDetail:
     summary: "刪除 Resource Type (Organization Owner/Admin)"
     security:
       - bearerAuth: []
+    parameters: *idParams
     responses:
       "204":
         description: Deleted
