--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
   "explorer.fileNesting.expand": false,
   "explorer.fileNesting.patterns": {
     "go.mod": "go.sum, go.work, go.work.sum, vendor",
-    "compose.yml": "docker-compose.yml, *compose.yml",
+    "compose.yml": "*compose.yml",
     ".env": ".env.*",
     "Dockerfile": ".dockerignore, Dockerfile*",
     "repomix.config.json": "codebase-for-llm.*"
