--- a/docs/paths/resourcetypes.yml
+++ b/docs/paths/resourcetypes.yml
@@ -8,6 +8,9 @@ listResourceTypes:
     parameters:
       - $ref: "../components/parameters.yml#/page"
       - $ref: "../components/parameters.yml#/page_size"
+      - $ref: "../components/parameters.yml#/sort_by"
+        description: "Sort field (enum: name, created_at)"
+      - $ref: "../components/parameters.yml#/sort_order"
       - name: organization_id
         in: query
         schema:
