--- a/docs/paths/members.yml
+++ b/docs/paths/members.yml
@@ -2,7 +2,13 @@ listMembers:
   get:
     tags:
       - Members
-    summary: "列出組織成員"
+    summary: "查詢成員列表"
+    description: |
+      列出 Organization 中的所有成員。
+
+      **權限 Access Control**:
+      - **System Admin**: 完全存取權限。
+      - **Organization Owner / Manager**: 可查看自己所屬 Organization 的成員。
     security:
       - bearerAuth: []
     parameters:
@@ -34,7 +40,17 @@ listMembers:
   post:
     tags:
       - Members
-    summary: "邀請/加入成員 (System Admin)"
+    summary: "新增成員"
+    description: |
+      將使用者加入至 Organization。
+
+      **注意 Note**:
+      - 僅能新增 `manager` 角色。
+      - 無法透過此 API 新增 `owner`。
+
+      **權限 Access Control**:
+      - **System Admin**: 完全存取權限。
+      - **Organization Owner / Manager**: 可管理自己所屬 Organization 的成員。
     security:
       - bearerAuth: []
     parameters:
@@ -63,7 +79,17 @@ memberDetail:
   patch:
     tags:
       - Members
-    summary: "修改成員角色 (System Admin)"
+    summary: "修改成員角色"
+    description: |
+      更新 Organization 成員的角色。
+
+      **注意 Note**:
+      - 僅能更新為 `manager` 角色。
+      - 無法透過此 API 指派 `owner` 權限。
+
+      **權限 Access Control**:
+      - **System Admin**: 完全存取權限。
+      - **Organization Owner / Manager**: 可管理自己所屬 Organization 的成員。
     security:
       - bearerAuth: []
     parameters: &idParams
@@ -103,7 +129,13 @@ memberDetail:
   delete:
     tags:
       - Members
-    summary: "移除成員 (System Admin)"
+    summary: "刪除成員"
+    description: |
+      將使用者從 Organization 中移除。
+
+      **權限 Access Control**:
+      - **System Admin**: 完全存取權限。
+      - **Organization Owner / Manager**: 可管理自己所屬 Organization 的成員。
     security:
       - bearerAuth: []
     parameters: *idParams
