--- a/docs/paths/users.yml
+++ b/docs/paths/users.yml
@@ -2,7 +2,12 @@ listUsers:
   get:
     tags:
       - Users
-    summary: "列出所有使用者 (System Admin)"
+    summary: "取得使用者列表"
+    description: |
+      分頁列出系統中所有使用者。
+
+      **權限 Access Control**:
+      - **System Admin Only**: 僅系統管理員可使用。
     security:
       - bearerAuth: []
     parameters:
@@ -46,7 +51,12 @@ userDetail:
   get:
     tags:
       - Users
-    summary: "取得單一使用者詳情 (System Admin)"
+    summary: "取得使用者詳情"
+    description: |
+      取得特定使用者的詳細資訊。
+
+      **權限 Access Control**:
+      - **System Admin Only**: 僅系統管理員可使用。
     security:
       - bearerAuth: []
     parameters: &idParam
@@ -70,7 +80,12 @@ userDetail:
   patch:
     tags:
       - Users
-    summary: "更新使用者狀態/權限 (System Admin)"
+    summary: "更新使用者"
+    description: |
+      更新特定使用者的狀態或權限。
+
+      **權限 Access Control**:
+      - **System Admin Only**: 僅系統管理員可使用。
     security:
       - bearerAuth: []
     parameters: *idParam
@@ -94,7 +109,12 @@ userDetail:
   delete:
     tags:
       - Users
-    summary: "刪除使用者 (軟刪除) (System Admin)"
+    summary: "刪除使用者"
+    description: |
+      刪除特定使用者 (軟刪除)。
+
+      **權限 Access Control**:
+      - **System Admin Only**: 僅系統管理員可使用。
     security:
       - bearerAuth: []
     parameters: *idParam
